--- a/webflow-code/css/new-schedule.webflow.css
+++ b/webflow-code/css/new-schedule.webflow.css
@@ -46,30 +46,7 @@
   border-radius: 50px;
 }
 
-.div-block.check-box.color-1 {
-  background-color: #f5a623;
-}
 
-.div-block.check-box.color-2 {
-  background-color: #4a90e2;
-}
-
-.div-block.check-box.color-3 {
-  background-color: #9b9b9b;
-}
-
-.div-block.check-box.color-4 {
-  border-radius: 50px;
-  background-color: #f8e71c;
-}
-
-.div-block.check-box-square.color-1 {
-  background-color: #f5a623;
-}
-
-.div-block.check-box-square.color-2 {
-  background-color: #4a90e2;
-}
 
 .div-block.check-box-square.color-3 {
   background-color: #9b9b9b;
@@ -331,16 +308,7 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
 }
 
-.date-icon {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 35px;
-  height: 35px;
-  padding-top: 5px;
-  float: right;
-  text-align: center;
-}
+
 
 .event-circles {
   position: absolute;
@@ -387,17 +355,6 @@
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, .5);
 }
 
-.one-circle.color-2 {
-  background-color: #f8e71c;
-}
-
-.one-circle.color-3 {
-  background-color: #4a90e2;
-}
-
-.one-circle.color-4 {
-  background-color: #9b9b9b;
-}
 
 .html-embed {
   position: static;
@@ -857,84 +814,37 @@
   filter: grayscale(100%);
 }
 
-.square-btn {
-  position: relative;
-  z-index: 5;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: visible;
-  width: 100%;
-  height: 20px;
-  margin: 3px 2px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
-  font-family: 'Open Sans', sans-serif;
-  color: #fff;
-  font-size: 10px;
-  font-weight: 100;
-  text-align: center;
-}
+/*.square-btn {*/
+  /*position: relative;*/
+  /*z-index: 5;*/
+  /*display: -webkit-box;*/
+  /*display: -webkit-flex;*/
+  /*display: -ms-flexbox;*/
+  /*display: flex;*/
+  /*overflow: visible;*/
+  /*width: 100%;*/
+  /*height: 20px;*/
+  /*margin: 3px 2px;*/
+  /*-webkit-box-orient: vertical;*/
+  /*-webkit-box-direction: normal;*/
+  /*-webkit-flex-direction: column;*/
+  /*-ms-flex-direction: column;*/
+  /*flex-direction: column;*/
+  /*-webkit-box-flex: 1;*/
+  /*-webkit-flex: 1;*/
+  /*-ms-flex: 1;*/
+  /*flex: 1;*/
+  /*box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);*/
+  /*font-family: 'Open Sans', sans-serif;*/
+  /*color: #fff;*/
+  /*font-size: 10px;*/
+  /*font-weight: 100;*/
+  /*text-align: center;*/
+/*}*/
 
-.square-btn:hover {
-  box-shadow: none;
-}
-
-.square-btn.color-1 {
-  overflow: visible;
-  margin-right: 2px;
-  margin-left: 2px;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  border-radius: 0px;
-  background-color: #f5a623;
-  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, .5);
-}
-
-.square-btn.color-2 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  background-color: #f8e71c;
-}
-
-.square-btn.color-3 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-color: #4a90e2;
-}
-
-.square-btn.color-4 {
-  background-color: #9b9b9b;
-}
-
-.square-btn.highlight-mode {
-  opacity: 0.2;
-}
+/*.square-btn:hover {*/
+  /*box-shadow: none;*/
+/*}*/
 
 .repeating-tag {
   position: static;
@@ -958,37 +868,18 @@
   letter-spacing: 1px;
 }
 
-.square-btn-text {
-  position: static;
-  float: none;
-  clear: none;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  border-radius: 0px;
-  background-color: #0098ff;
-  font-size: 12px;
-}
+/*.square-btn-text {*/
+  /*position: static;*/
+  /*float: none;*/
+  /*clear: none;*/
+  /*-webkit-box-flex: 1;*/
+  /*-webkit-flex: 1;*/
+  /*-ms-flex: 1;*/
+  /*flex: 1;*/
+  /*border-radius: 0px;*/
+  /*font-size: 12px;*/
+/*}*/
 
-.square-btn-text.color-1 {
-  background-color: #f8e71c;
-}
-
-.square-btn-text.color-2 {
-  background-color: #f5a623;
-}
-
-.square-btn-text.color-4 {
-  -webkit-align-self: stretch;
-  -ms-flex-item-align: stretch;
-  align-self: stretch;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background-color: #9b9b9b;
-}
 
 .month-label {
   display: -webkit-box;
@@ -1804,27 +1695,27 @@
   .details {
     min-width: 300px;
   }
-  .event-boxes {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-flex-wrap: wrap-reverse;
-    -ms-flex-wrap: wrap-reverse;
-    flex-wrap: wrap-reverse;
-    -webkit-box-align: end;
-    -webkit-align-items: flex-end;
-    -ms-flex-align: end;
-    align-items: flex-end;
-    -webkit-align-content: flex-end;
-    -ms-flex-line-pack: end;
-    align-content: flex-end;
-  }
+  /*.event-boxes {*/
+    /*-webkit-box-orient: horizontal;*/
+    /*-webkit-box-direction: normal;*/
+    /*-webkit-flex-direction: row;*/
+    /*-ms-flex-direction: row;*/
+    /*flex-direction: row;*/
+    /*-webkit-box-pack: center;*/
+    /*-webkit-justify-content: center;*/
+    /*-ms-flex-pack: center;*/
+    /*justify-content: center;*/
+    /*-webkit-flex-wrap: wrap-reverse;*/
+    /*-ms-flex-wrap: wrap-reverse;*/
+    /*flex-wrap: wrap-reverse;*/
+    /*-webkit-box-align: end;*/
+    /*-webkit-align-items: flex-end;*/
+    /*-ms-flex-align: end;*/
+    /*align-items: flex-end;*/
+    /*-webkit-align-content: flex-end;*/
+    /*-ms-flex-line-pack: end;*/
+    /*align-content: flex-end;*/
+  /*}*/
   .square-btn {
     width: 20px;
     height: 20px;
@@ -1841,10 +1732,10 @@
   .repeating-tag {
     display: none;
   }
-  .square-btn-text {
-    border-radius: 100px;
-    font-size: 0px;
-  }
+  /*.square-btn-text {*/
+    /*border-radius: 100px;*/
+    /*font-size: 0px;*/
+  /*}*/
   .month-label.one-week {
     position: static;
     float: none;
@@ -2047,33 +1938,33 @@
     -ms-flex-align: stretch;
     align-items: stretch;
   }
-  .square-btn {
-    position: relative;
-    display: block;
-    width: auto;
-    height: auto;
-    -webkit-align-self: stretch;
-    -ms-flex-item-align: stretch;
-    align-self: stretch;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  }
-  .square-btn-text {
-    border-radius: 0px;
-    font-size: 12px;
-  }
-  .square-btn-text.color-3 {
-    font-size: 12px;
-  }
-  .square-btn-text.color-4 {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    font-size: 12px;
-  }
+  /*.square-btn {*/
+    /*position: relative;*/
+    /*display: block;*/
+    /*width: auto;*/
+    /*height: auto;*/
+    /*-webkit-align-self: stretch;*/
+    /*-ms-flex-item-align: stretch;*/
+    /*align-self: stretch;*/
+    /*-webkit-box-flex: 1;*/
+    /*-webkit-flex: 1;*/
+    /*-ms-flex: 1;*/
+    /*flex: 1;*/
+  /*}*/
+  /*.square-btn-text {*/
+    /*border-radius: 0px;*/
+    /*font-size: 12px;*/
+  /*}*/
+  /*.square-btn-text.color-3 {*/
+    /*font-size: 12px;*/
+  /*}*/
+  /*.square-btn-text.color-4 {*/
+    /*-webkit-box-flex: 1;*/
+    /*-webkit-flex: 1;*/
+    /*-ms-flex: 1;*/
+    /*flex: 1;*/
+    /*font-size: 12px;*/
+  /*}*/
   .and-more-label {
     display: block;
   }
