--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
   /*border: solid;*/
   border-color: #444444;
   /*border-width: 2px;*/
-  /*min-height: 80px;*/
+  min-height: 80px;
   /*display: -webkit-flex;*/
   /*display: flex;*/
   /*-webkit-box-flex: 1;*/
@@ -83,6 +83,7 @@
     -ms-flex: 0 auto;
     flex: 0 auto;
     box-shadow: none;
+    min-height: 0px;
 
 }
 
@@ -128,7 +129,7 @@
 
 .span-monday-friday {
   grid-column: col 2 / span 5;
-  grid-row: row 4  ;
+
   color:white;
   z-index: 20;
   height: 20px;
@@ -138,8 +139,7 @@
   align-self: flex-end;
 }
 .span-six-weeks {
-  grid-column: col 2;
-  grid-row: row 3  / span 5  ;
+
   color:white;
   z-index: 20;
   width:20px;
@@ -149,11 +149,11 @@
   align-self: stretch;
 
 }
-
 .span-six-weeks .label {
   transform: rotate(90deg);
+    overflow: visible;
+    white-space: nowrap;
 }
-
 
 .spanner {
   text-align: center;
@@ -264,10 +264,12 @@
 .and-more-label {
     height: 20px;
     color: #333;
-    font-size: 12px;
+    font-size: 11px;
     text-align: center;
     font-weight: 400;
     align-items: flex-end;
+    margin-bottom: -3px;
+    width:100%;
 }
 
 .closed {
@@ -277,4 +279,9 @@
     border: 2px dashed #d2d2d2;
     background-color: transparent;
     box-shadow: none;
+}
+
+.selectable:hover {
+    z-index: 1000 !important;
+    cursor: pointer;
 }
