--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,13 @@
   /*border-width: 2px;*/
   min-height: 80px;
   /*display: -webkit-flex;*/
-  /*display: flex;*/
+  display: flex;
+    align-content: flex-start;
   /*-webkit-box-flex: 1;*/
   /*-webkit-flex: 1;*/
   /*-ms-flex: 1;*/
   /*flex: 1;*/
+    flex-direction: column;
   box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .25);
 
 
@@ -66,40 +68,23 @@
 }
 
 .day-top-container {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+
     display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
     align-items: flex-start;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 auto;
-    -ms-flex: 0 auto;
-    flex: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-content: stretch;
     box-shadow: none;
-    min-height: 0px;
+    min-height: 0;
 
 }
 
-/*.date-number {*/
-  /*max-width: 25px;*/
-  /*width: 25px;*/
-  /*-webkit-align-self: flex-start;*/
-  /*-ms-flex-item-align: start;*/
-  /*align-self: flex-start;*/
-  /*-webkit-box-flex: 1;*/
-  /*-webkit-flex: 1;*/
-  /*-ms-flex: 1;*/
-  /*flex: 1;*/
-  /*color: #333;*/
-  /*font-size: 20px;*/
-/*}*/
+.date-number {
+  color: #333;
+  z-index: 1000;
+    width: 100%;
+    max-width: none;
+}
 
 .date-icon {
     position: relative;
@@ -133,9 +118,9 @@
   color:white;
   z-index: 20;
   height: 20px;
-  margin-bottom: 5px;
-  margin-right:5px;
-  margin-left:5px;
+  /*margin-bottom: 5px;*/
+  /*margin-right:5px;*/
+  /*margin-left:5px;*/
   align-self: flex-end;
 }
 .span-six-weeks {
@@ -143,9 +128,9 @@
   color:white;
   z-index: 20;
   width:20px;
-  margin-top:5px;
-  margin-bottom: 5px;
-  margin-left:120px;
+  /*margin-top:5px;*/
+  /*margin-bottom: 5px;*/
+  /*margin-left:5px;*/
   align-self: stretch;
 
 }
@@ -219,32 +204,22 @@
 }
 
 .event-boxes {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
+
+    /*min-width: 80px;*/
+    /*display:flex;*/
+    /*flex-direction: column;*/
+    align-items: stretch;
+    width: 100%;
+    /*min-height: 0px;*/
+    display: flex;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-flex-wrap: wrap-reverse;
-    -ms-flex-wrap: wrap-reverse;
-    flex-wrap: wrap-reverse;
-    -webkit-box-align: end;
-    -webkit-align-items: flex-end;
-    -ms-flex-align: end;
-    align-items: flex-end;
-    -webkit-align-content: flex-end;
-    -ms-flex-line-pack: end;
-    align-content: flex-end;
-    min-width: 80px;
+    align-items: center;
+
 }
 
 .square-btn {
-  position: relative;
   z-index: 5;
-  width: 100%;
+  width: 95%;
   height: 20px;
   box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
   font-family: 'Open Sans', sans-serif;
@@ -252,9 +227,14 @@
   font-size: 10px;
   font-weight: 100;
   text-align: center;
+
+
+
+
 }
 
 .square-btn-text {
+    height: 20px;
 }
 
 .square-btn:hover {
