--- a/src/webflow.css
+++ b/src/webflow.css
@@ -815,41 +815,41 @@
   background-color: #2c3b46;
 }
 
-.event-boxes {
-  position: static;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: visible;
-  margin: 13px 5px 5px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-box-align: stretch;
-  -webkit-align-items: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  -webkit-align-content: flex-start;
-  -ms-flex-line-pack: start;
-  align-content: flex-start;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
+/*.event-boxes {*/
+  /*position: static;*/
+  /*left: 0px;*/
+  /*right: 0px;*/
+  /*bottom: 0px;*/
+  /*display: -webkit-box;*/
+  /*display: -webkit-flex;*/
+  /*display: -ms-flexbox;*/
+  /*display: flex;*/
+  /*overflow: visible;*/
+  /*margin: 13px 5px 5px;*/
+  /*-webkit-box-orient: vertical;*/
+  /*-webkit-box-direction: normal;*/
+  /*-webkit-flex-direction: column;*/
+  /*-ms-flex-direction: column;*/
+  /*flex-direction: column;*/
+  /*-webkit-box-pack: end;*/
+  /*-webkit-justify-content: flex-end;*/
+  /*-ms-flex-pack: end;*/
+  /*justify-content: flex-end;*/
+  /*-webkit-flex-wrap: nowrap;*/
+  /*-ms-flex-wrap: nowrap;*/
+  /*flex-wrap: nowrap;*/
+  /*-webkit-box-align: stretch;*/
+  /*-webkit-align-items: stretch;*/
+  /*-ms-flex-align: stretch;*/
+  /*align-items: stretch;*/
+  /*-webkit-align-content: flex-start;*/
+  /*-ms-flex-line-pack: start;*/
+  /*align-content: flex-start;*/
+  /*-webkit-box-flex: 1;*/
+  /*-webkit-flex: 1;*/
+  /*-ms-flex: 1;*/
+  /*flex: 1;*/
+/*}*/
 
 .event-boxes.highlight-mode {
   opacity: 0.16;
