--- a/webflow-code/css/new-schedule.webflow.css
+++ b/webflow-code/css/new-schedule.webflow.css
@@ -288,20 +288,20 @@
   background-color: orange;
 }
 
-.date-number {
-  max-width: 25px;
-  clear: none;
-  -webkit-align-self: flex-start;
-  -ms-flex-item-align: start;
-  align-self: flex-start;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  color: #333;
-  font-size: 20px;
-  text-shadow: none;
-}
+/*.date-number {*/
+  /*max-width: 25px;*/
+  /*clear: none;*/
+  /*-webkit-align-self: flex-start;*/
+  /*-ms-flex-item-align: start;*/
+  /*align-self: flex-start;*/
+  /*-webkit-box-flex: 1;*/
+  /*-webkit-flex: 1;*/
+  /*-ms-flex: 1;*/
+  /*flex: 1;*/
+  /*color: #333;*/
+  /*font-size: 20px;*/
+  /*text-shadow: none;*/
+/*}*/
 
 .date-number.high-light-date {
   color: #fff;
@@ -1459,24 +1459,24 @@
   width: 100px;
 }
 
-.day-top-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
-}
+/*.day-top-container {*/
+  /*display: -webkit-box;*/
+  /*display: -webkit-flex;*/
+  /*display: -ms-flexbox;*/
+  /*display: flex;*/
+  /*-webkit-box-pack: justify;*/
+  /*-webkit-justify-content: space-between;*/
+  /*-ms-flex-pack: justify;*/
+  /*justify-content: space-between;*/
+  /*-webkit-box-align: start;*/
+  /*-webkit-align-items: flex-start;*/
+  /*-ms-flex-align: start;*/
+  /*align-items: flex-start;*/
+  /*-webkit-box-flex: 0;*/
+  /*-webkit-flex: 0 auto;*/
+  /*-ms-flex: 0 auto;*/
+  /*flex: 0 auto;*/
+/*}*/
 
 .square-btn-copy {
   display: -webkit-box;
@@ -1716,19 +1716,16 @@
     /*-ms-flex-line-pack: end;*/
     /*align-content: flex-end;*/
   /*}*/
-  .square-btn {
-    width: 20px;
-    height: 20px;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 0 auto;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    border-radius: 100px;
-  }
-  .square-btn.color-1 {
-    width: 20px;
-    height: 20px;
-  }
+  /*.square-btn {*/
+    /*width: 20px;*/
+    /*height: 20px;*/
+    /*-webkit-box-flex: 0;*/
+    /*-webkit-flex: 0 0 auto;*/
+    /*-ms-flex: 0 0 auto;*/
+    /*flex: 0 0 auto;*/
+    /*border-radius: 100px;*/
+  /*}*/
+
   .repeating-tag {
     display: none;
   }
@@ -1886,13 +1883,13 @@
     margin-top: 2px;
     margin-bottom: 2px;
   }
-  .date-number {
-    position: static;
-    left: 0px;
-    top: 0px;
-    float: left;
-    font-size: 14px;
-  }
+  /*.date-number {*/
+    /*position: static;*/
+    /*left: 0px;*/
+    /*top: 0px;*/
+    /*float: left;*/
+    /*font-size: 14px;*/
+  /*}*/
   .event-circles {
     display: none;
   }
