--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   /*-ms-flex: 1;*/
   /*flex: 1;*/
     flex-direction: column;
-  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .25);
+  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
 
 
 }
@@ -63,7 +63,7 @@
     opacity: 75;
 }
 .special-color {
-  background-color: #b3be14 !important;
+  background-color: #ffb4b4 !important;
     opacity: 75;
 }
 
@@ -76,6 +76,7 @@
     align-content: stretch;
     box-shadow: none;
     min-height: 0;
+    padding-top: 0;
 
 }
 
