--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   font-weight: 700;
   width: 75%;
   margin-left: 10%;
+
+}
+
+body {
+    background-color: rgb(247, 247, 247);
+
 }
 
 .App-logo {
@@ -29,9 +35,7 @@
   padding: 5px;
   /*font-size: 150%;*/
   z-index:10;
-  justify-items: center;
-  align-items: stretch;
-  align-content: stretch;
+
   justify-content: flex-start;
   /*border: solid;*/
   border-color: #444444;
@@ -97,16 +101,17 @@
 
 .grid {
   display: grid;
-  grid-gap: 4px;
+  grid-gap: 8px;
   grid-template-columns: repeat(7, [col] auto ) ;
-  /*background-color: #ebebeb;*/
   color: #444;
   padding: 10px;
 }
 
 .week-names {
-  align-content: stretch;
+  align-content: center;
   text-align: center;
+    flex-shrink: 1;
+    font-size: 14px;
 }
 
 .span-monday-friday {
@@ -115,7 +120,7 @@
   color:white;
   z-index: 20;
   height: 20px;
-  /*margin-bottom: 5px;*/
+  margin-bottom: 5px;
   /*margin-right:5px;*/
   /*margin-left:5px;*/
   align-self: flex-end;
@@ -127,7 +132,7 @@
   width:20px;
   /*margin-top:5px;*/
   /*margin-bottom: 5px;*/
-  /*margin-left:5px;*/
+  margin-left:5px;
   align-self: stretch;
 
 }
@@ -217,29 +222,7 @@
 
 }
 
-.square-btn {
-  z-index: 5;
-  width: 95%;
-  height: 20px;
-  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
-  font-family: 'Open Sans', sans-serif;
-  /*color: #fff;*/
-  font-size: 10px;
-  font-weight: 100;
-  text-align: center;
 
-
-
-
-}
-
-.square-btn-text {
-    height: 20px;
-}
-
-.square-btn:hover {
-  box-shadow: none;
-}
 
 .and-more-label {
     height: 20px;
@@ -268,6 +251,7 @@
 
 .no-day {
     box-shadow: none !important;
+    background-color: transparent;
 }
 
 .filters {
@@ -314,4 +298,42 @@
     height:100%;
     justify-content: center;
     text-align: center;
+}
+
+.square-btn-additional-copy {
+    color: #484848;
+    font-size:105%;
+    padding-top:2px;
+}
+
+.square-btn-copy {
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
+
+}
+.square-btn {
+    z-index: 5;
+    width: 95%;
+    height: 30px;
+    font-family: 'Open Sans', sans-serif;
+    /*color: #fff;*/
+    font-size: 10px;
+    font-weight: 100;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+.square-btn.special-color {
+    background-color: transparent;
+    box-shadow: none;
+}
+.square-btn.drop-in-color {
+    background-color: transparent;
+    box-shadow: none;
+}
+
+.square-btn-text {
+}
+
+.square-btn:hover {
+    box-shadow: none;
 }
