--- a/src/webflow.css
+++ b/src/webflow.css
@@ -203,7 +203,7 @@
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-color: #d2d2d2;
+  background-color: #b0b0b0;
 }
 
 .calendar-days {
@@ -512,10 +512,11 @@
   border-bottom-color: #d2d2d2;
   border-left-width: 3px;
   border-left-color: #d2d2d2;
-  background-color: #fff;
-  color: #d2d2d2;
+  color: #b0b0b0;
   font-size: 28px;
   text-align: center;
+  background-color: rgb(247, 247, 247);
+
 }
 
 .filler-end-of-month {
@@ -1574,45 +1575,7 @@
   /*flex: 0 auto;*/
 /*}*/
 
-.square-btn-copy {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
 
-.sqaure-btn-additional-copy {
-  display: none;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-align-self: stretch;
-  -ms-flex-item-align: stretch;
-  align-self: stretch;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
-}
 
 @media (max-width: 991px) {
   .heading {
