--- a/src/App.css
+++ b/src/App.css
@@ -55,16 +55,26 @@ body {
 }
 
 .series-color {
-  background-color: rgba(0,0,255,1);
+  background-color: rgba(231,30,183,.75);
+  /*mix-blend-mode: multiply;*/
 }
+.series-color:hover{
+    background-color: rgba(231,30,183,1);
+
+}
+
 .drop-in-color {
-  background-color: rgb(171, 207, 7);
+  background-color: rgba(255,77,71, .75);
 }
 .camp-color {
-  background-color: rgba(64, 25, 13, 1);
+  background-color: rgba(255,154,0,.75);
+  /*mix-blend-mode: multiply;*/
+}
+.camp-color:hover {
+    background-color: rgba(255,154,0,1);
 }
 .special-color {
-  background-color: rgba(255,0,0,1);
+  background-color: rgba(255,219,0,1);
 }
 
 .day-top-container {
@@ -83,11 +93,13 @@ body {
 
 .date-number {
   align-content: flex-start;
-  color: #333;
+  color: #ffffff;
   z-index: 1000;
   width: 100%;
   max-width: none;
   text-align:left;
+  text-shadow: 1px 1px rgba(72, 72, 72, 0.3);
+
 }
 
 .date-icon {
@@ -108,7 +120,9 @@ body {
   grid-template-columns: repeat(7, [col] auto ) ;
   color: #444;
   padding: 10px;
+
 }
+
 
 .week-names {
   align-content: center;
@@ -150,8 +164,9 @@ body {
   vertical-align: middle;
     font-family: 'Open Sans', sans-serif;
     color: #fff;
-    font-size: 12px;
-    font-weight: 100;
+    font-size: 13px;
+    font-weight: 300;
+    letter-spacing: 1px;
   display: -webkit-flex;
   display: flex;
   -webkit-align-items: center;
@@ -251,8 +266,13 @@ body {
     z-index: 1000 !important;
     cursor: pointer;
     box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, .5) !important;
-    transform:translate(-2px, -2px);
-
+    transform: translate(-2px, -2px) scale(1.1, 1.1);
+    transition: all 150ms ease-out;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+.selectable {
+    transition: all 150ms ease-out;
 }
 
 .no-day {
@@ -347,16 +367,32 @@ body {
     background-color: transparent;
     display: flex;
     flex-direction: row;
+    z-index: 999;
+    mix-blend-mode: multiply;
 }
+/*.event-container-series :hover {*/
+
+    /*z-index: 2000 !important;*/
+    /*!*mix-blend-mode: multiply;*!*/
+/*}*/
+
 .contained-series {
-    color:white;
+    color: white;
     z-index: 20;
-    width:20px;
+    width: 20px;
     /*margin-top:5px;*/
     /*margin-bottom: 5px;*/
-    margin-left:5px;
+    margin-left: 5px;
     align-self: stretch;
+    z-index: 999;
+    /*mix-blend-mode: multiply;*/
 }
+
+/*}*/
+/*.contained-series:hover {*/
+    /*mix-blend-mode: normal !important;*/
+    /*z-index: 1000;*/
+/*}*/
 
 .contained-series .label {
     transform: rotate(90deg);
@@ -371,7 +407,14 @@ body {
     align-content: flex-end;
     align-items: flex-end;
     justify-content: flex-end;
+    z-index: 999;
+    mix-blend-mode: multiply;
 }
+
+/*.event-container-camp:hover {*/
+    /*mix-blend-mode: normal;*/
+    /*z-index: 1000;*/
+/*}*/
 .camp {
     background-color: transparent;
     display: flex;
@@ -385,4 +428,9 @@ body {
     /*margin-bottom: 5px;*/
     margin-bottom:5px;
     align-self: stretch;
+    /*mix-blend-mode: multiply;*/
 }
+
+/*.contained-camp:hover {*/
+    /*mix-blend-mode: normal;*/
+/*}*/
