--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+
+
+
 .App {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
@@ -372,6 +375,7 @@ body {
 .square-btn-copy {
     box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
 
+
 }
 .square-btn {
     z-index: 5;
@@ -384,6 +388,8 @@ body {
     text-align: center;
     display: flex;
     justify-content: center;
+    box-shadow: none;
+
 }
 .square-btn.special-color {
     background-color: transparent;
@@ -395,6 +401,10 @@ body {
 }
 
 .square-btn-text {
+
+    height:20px;
+    padding-top:4px;
+
 }
 
 .square-btn:hover {
