--- a/src/App.css
+++ b/src/App.css
@@ -518,10 +518,18 @@ body {
 .month-label.one-week {
     background-color: rgb(247, 247, 247);
 }
-.month-label.one-week > div{
+.month-label.one-week > div {
     height:40px;
     background-color: rgb(247, 247, 247);
     display: flex;
     align-content: center;
     justify-content: center;
+}
+.filtering-header {
+    /*display: flex;*/
+    /*align-content: center;*/
+    /*justify-content:center;*/
+    /*margin-bottom: 15px;*/
+    display: grid;
+    grid-gap: 5px;
 }
