--- a/src/webflow.css
+++ b/src/webflow.css
@@ -104,13 +104,7 @@
   text-align: left;
 }
 
-.heading {
-  padding-right: 10px;
-  padding-left: 10px;
-  font-size: 30px;
-  font-weight: 600;
-  margin-bottom:30px;
-}
+
 
 .filter-circle-check {
   min-width: 150px;
@@ -198,7 +192,7 @@
   max-height: 3px;
   margin-top: 2px;
   margin-right: -5px;
-  margin-left: -5px;
+  /*margin-left: -5px;*/
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   align-self: center;
@@ -520,9 +514,6 @@
   text-align: center;
   background-color: rgb(247, 247, 247);
 
-}
-.month-label {
-  height: 60px;
 }
 
 .filler-end-of-month {
