--- a/src/App.css
+++ b/src/App.css
@@ -612,7 +612,7 @@ body {
     justify-content: space-around;
     margin-top: -20px;
     padding: 10px;
-    width: 160px;
+    width: 250px;
     z-index: 99999;
 
 }
@@ -690,6 +690,7 @@ body {
 .top-link {
     margin: 10px;
     padding-left: 5px;
+    margin-right:20px;
     text-transform: uppercase;
     cursor: pointer;
 }
